Be more cautious: When using a shared thread, signals may come for other images as well

BUG: 166576

svn path=/trunk/extragear/graphics/digikam/; revision=834001